syntax = "proto3";
package com.my.grpc.task;

message SchedulerTasksRequest{
  int64 id =1;
}

message TaskDto{
  int64 id = 1;
  string title = 2;
  string status = 3;
}

message TaskResponse{
  repeated TaskDto tasks=1;
}

service TaskService{
  rpc findAllByUserId(SchedulerTasksRequest) returns (TaskResponse);
}