syntax = "proto3";
package com.my.grpc.task;

message SchedulerTasksRequest{
  int64 id =1;
}

message TaskDto{
  int64 id = 1;
  string email=2;
  string title = 3;
  string status = 4;
}

message TaskResponse{
  repeated TaskDto tasks=1;
}

service TaskServiceSchedule{
  rpc findAllByUserId(SchedulerTasksRequest) returns (TaskResponse);
}